<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="@dimen/_4sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/block_user"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/block_user_confirmation"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_11ssp"
            android:lineSpacingExtra="@dimen/_2sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/block"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="true"
                app:backgroundTint="@color/red"
                app:cornerRadius="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>