<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_popup"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_4sdp">

    <TextView
        android:id="@+id/menuPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/policy_analyzer"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@color/separator" />

    <TextView
        android:id="@+id/menuReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/report_assistant"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@color/separator" />

    <TextView
        android:id="@+id/menuResources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/safety_resources"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>