<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ReportActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_text"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/report_incident"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack"/>

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/imageBack" />

    <!-- Step 1: Category Selection -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/layoutStep1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/layoutBottom"
        app:layout_constraintTop_toBottomOf="@id/viewSeparator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_question"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/report_instruction"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_11ssp" />

            <RadioGroup
                android:id="@+id/radioGroupCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/catHarassment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/report_cat_harassment"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableTint="@color/macos_accent"
                    android:gravity="start|center_vertical"
                    android:background="?attr/selectableItemBackground" />

                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/separator" />

                <RadioButton
                    android:id="@+id/catViolence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/report_cat_violence"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableTint="@color/macos_accent"
                    android:gravity="start|center_vertical"
                    android:background="?attr/selectableItemBackground" />

                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/separator" />

                <RadioButton
                    android:id="@+id/catChildSafety"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/report_cat_child_safety"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableTint="@color/macos_accent"
                    android:gravity="start|center_vertical"
                    android:background="?attr/selectableItemBackground" />

                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/separator" />

                <RadioButton
                    android:id="@+id/catPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/report_cat_privacy"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableTint="@color/macos_accent"
                    android:gravity="start|center_vertical"
                    android:background="?attr/selectableItemBackground" />

                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/separator" />

                <RadioButton
                    android:id="@+id/catIllegal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/report_cat_illegal"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableTint="@color/macos_accent"
                    android:gravity="start|center_vertical"
                    android:background="?attr/selectableItemBackground" />

                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/separator" />

                <RadioButton
                    android:id="@+id/catSpam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/report_cat_spam"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableTint="@color/macos_accent"
                    android:gravity="start|center_vertical"
                    android:background="?attr/selectableItemBackground" />

                <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/separator" />

                <RadioButton
                    android:id="@+id/catAdult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/report_cat_adult"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableTint="@color/macos_accent"
                    android:gravity="start|center_vertical"
                    android:background="?attr/selectableItemBackground" />

            </RadioGroup>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Step 2: Evidence & Details -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/layoutStep2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/layoutBottom"
        app:layout_constraintTop_toBottomOf="@id/viewSeparator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/textReportTarget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                tools:text="Reporting User Name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/report_review_notice"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp" />

            <LinearLayout
                android:id="@+id/layoutFlaggedInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flagged_message_label"
                    android:textAllCaps="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textMessageExplanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/select_message_explanation"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_9ssp" />

                <LinearLayout
                    android:id="@+id/layoutMessageSelector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/bg_border"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textMessage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="@dimen/_2sdp"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_11ssp"
                            tools:text="Flagged message content goes here..." />

                        <TextView
                            android:id="@+id/textReason"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:textColor="@color/red"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="italic"
                            tools:text="Reason: Potential grooming behavior detected." />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageDropdown"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_chevron_down"
                        app:tint="@color/secondary_text" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/provide_feedback"
                android:textAllCaps="true"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_border"
                android:gravity="top"
                android:hint="@string/report_feedback_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAction"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:backgroundTint="@color/macos_accent"
            app:cornerRadius="@dimen/_25sdp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>