<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardElevation="@dimen/_4sdp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="@dimen/_160sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menuMute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mute_conversation"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/ic_mute_bell"
                app:tint="@color/primary_text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <LinearLayout
            android:id="@+id/menuSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_conversation"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/ic_search"
                app:tint="@color/primary_text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <LinearLayout
            android:id="@+id/menuDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_conversation"
                android:textColor="@color/red"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/red" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>